parser.output
Terminais sem uso na gramática

    DIGIT
    LETTER
    COMMA
    TEAM1_SCORE
    TEAM2_SCORE
    POSSESSION
    GAME_TIME
    TEAM1_PLAYER1
    TEAM1_PLAYER2
    TEAM1_PLAYER3
    TEAM1_PLAYER4
    TEAM1_PLAYER5
    TEAM1_PLAYER6
    TEAM1_PLAYER7
    TEAM1_PLAYER8
    TEAM1_PLAYER9
    TEAM1_PLAYER10
    TEAM1_PLAYER11
    TEAM2_PLAYER1
    TEAM2_PLAYER2
    TEAM2_PLAYER3
    TEAM2_PLAYER4
    TEAM2_PLAYER5
    TEAM2_PLAYER6
    TEAM2_PLAYER7
    TEAM2_PLAYER8
    TEAM2_PLAYER9
    TEAM2_PLAYER10
    TEAM2_PLAYER11


Estado 6 conflitos: 1 de deslocamento/redução
Estado 10 conflitos: 1 de deslocamento/redução
Estado 26 conflitos: 1 de deslocamento/redução
Estado 27 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: program $end

    1 program: statements

    2 statements: statement
    3           | statements statement

    4 statement: IF expression THEN statements ELSE statements ENDIF
    5          | WHILE expression DO statements ENDWHILE
    6          | FUNCTION VARIABLE LEFT_PARENTHESIS RIGHT_PARENTHESIS statements ENDFUNCTION
    7          | DECLARE VARIABLE AS type
    8          | VARIABLE EQUAL expression
    9          | PRINT expression

   10 expression: expression PLUS term
   11           | expression MINUS term
   12           | term

   13 term: %empty
   14     | term OR factor
   15     | term AND factor
   16     | term EQUAL factor
   17     | term NOT_EQUAL factor
   18     | term LESS_THAN factor
   19     | term GREATER_THAN factor
   20     | term LESS_THAN_OR_EQUAL factor
   21     | term GREATER_THAN_OR_EQUAL factor
   22     | factor

   23 factor: factor LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
   24       | value

   25 value: NUMBER
   26      | STRING
   27      | VARIABLE

   28 type: TYPE_STRING
   29     | TYPE_INTEGER


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    DIGIT (258)
    NUMBER (259) 25
    LETTER (260)
    STRING (261) 26
    VARIABLE (262) 6 7 8 27
    IF (263) 4
    THEN (264) 4
    ELSE (265) 4
    ENDIF (266) 4
    WHILE (267) 5
    DO (268) 5
    ENDWHILE (269) 5
    FUNCTION (270) 6
    ENDFUNCTION (271) 6
    DECLARE (272) 7
    AS (273) 7
    PRINT (274) 9
    TYPE_STRING (275) 28
    TYPE_INTEGER (276) 29
    AND (277) 15
    OR (278) 14
    EQUAL (279) 8 16
    NOT_EQUAL (280) 17
    LESS_THAN (281) 18
    GREATER_THAN (282) 19
    LESS_THAN_OR_EQUAL (283) 20
    GREATER_THAN_OR_EQUAL (284) 21
    LEFT_PARENTHESIS (285) 6 23
    RIGHT_PARENTHESIS (286) 6 23
    PLUS (287) 10
    MINUS (288) 11
    COMMA (289)
    TEAM1_SCORE (290)
    TEAM2_SCORE (291)
    POSSESSION (292)
    GAME_TIME (293)
    TEAM1_PLAYER1 (294)
    TEAM1_PLAYER2 (295)
    TEAM1_PLAYER3 (296)
    TEAM1_PLAYER4 (297)
    TEAM1_PLAYER5 (298)
    TEAM1_PLAYER6 (299)
    TEAM1_PLAYER7 (300)
    TEAM1_PLAYER8 (301)
    TEAM1_PLAYER9 (302)
    TEAM1_PLAYER10 (303)
    TEAM1_PLAYER11 (304)
    TEAM2_PLAYER1 (305)
    TEAM2_PLAYER2 (306)
    TEAM2_PLAYER3 (307)
    TEAM2_PLAYER4 (308)
    TEAM2_PLAYER5 (309)
    TEAM2_PLAYER6 (310)
    TEAM2_PLAYER7 (311)
    TEAM2_PLAYER8 (312)
    TEAM2_PLAYER9 (313)
    TEAM2_PLAYER10 (314)
    TEAM2_PLAYER11 (315)


Não terminais com as regras onde eles aparecem

    $accept (61)
        à esquerda: 0
    program (62)
        à esquerda: 1
        à direita: 0
    statements (63)
        à esquerda: 2 3
        à direita: 1 3 4 5 6
    statement (64)
        à esquerda: 4 5 6 7 8 9
        à direita: 2 3
    expression (65)
        à esquerda: 10 11 12
        à direita: 4 5 8 9 10 11 23
    term (66)
        à esquerda: 13 14 15 16 17 18 19 20 21 22
        à direita: 10 11 12 14 15 16 17 18 19 20 21
    factor (67)
        à esquerda: 23 24
        à direita: 14 15 16 17 18 19 20 21 22 23
    value (68)
        à esquerda: 25 26 27
        à direita: 24
    type (69)
        à esquerda: 28 29
        à direita: 7


Estado 0

    0 $accept: • program $end

    VARIABLE  deslocar, e ir ao estado 1
    IF        deslocar, e ir ao estado 2
    WHILE     deslocar, e ir ao estado 3
    FUNCTION  deslocar, e ir ao estado 4
    DECLARE   deslocar, e ir ao estado 5
    PRINT     deslocar, e ir ao estado 6

    program     ir ao estado 7
    statements  ir ao estado 8
    statement   ir ao estado 9


Estado 1

    8 statement: VARIABLE • EQUAL expression

    EQUAL  deslocar, e ir ao estado 10


Estado 2

    4 statement: IF • expression THEN statements ELSE statements ENDIF

    NUMBER    deslocar, e ir ao estado 11
    STRING    deslocar, e ir ao estado 12
    VARIABLE  deslocar, e ir ao estado 13

    $padrão  reduzir usando a regra 13 (term)

    expression  ir ao estado 14
    term        ir ao estado 15
    factor      ir ao estado 16
    value       ir ao estado 17


Estado 3

    5 statement: WHILE • expression DO statements ENDWHILE

    NUMBER    deslocar, e ir ao estado 11
    STRING    deslocar, e ir ao estado 12
    VARIABLE  deslocar, e ir ao estado 13

    $padrão  reduzir usando a regra 13 (term)

    expression  ir ao estado 18
    term        ir ao estado 15
    factor      ir ao estado 16
    value       ir ao estado 17


Estado 4

    6 statement: FUNCTION • VARIABLE LEFT_PARENTHESIS RIGHT_PARENTHESIS statements ENDFUNCTION

    VARIABLE  deslocar, e ir ao estado 19


Estado 5

    7 statement: DECLARE • VARIABLE AS type

    VARIABLE  deslocar, e ir ao estado 20


Estado 6

    9 statement: PRINT • expression

    NUMBER    deslocar, e ir ao estado 11
    STRING    deslocar, e ir ao estado 12
    VARIABLE  deslocar, e ir ao estado 13

    VARIABLE  [reduzir usando a regra 13 (term)]
    $padrão   reduzir usando a regra 13 (term)

    expression  ir ao estado 21
    term        ir ao estado 15
    factor      ir ao estado 16
    value       ir ao estado 17


Estado 7

    0 $accept: program • $end

    $end  deslocar, e ir ao estado 22


Estado 8

    1 program: statements •
    3 statements: statements • statement

    VARIABLE  deslocar, e ir ao estado 1
    IF        deslocar, e ir ao estado 2
    WHILE     deslocar, e ir ao estado 3
    FUNCTION  deslocar, e ir ao estado 4
    DECLARE   deslocar, e ir ao estado 5
    PRINT     deslocar, e ir ao estado 6

    $padrão  reduzir usando a regra 1 (program)

    statement  ir ao estado 23


Estado 9

    2 statements: statement •

    $padrão  reduzir usando a regra 2 (statements)


Estado 10

    8 statement: VARIABLE EQUAL • expression

    NUMBER    deslocar, e ir ao estado 11
    STRING    deslocar, e ir ao estado 12
    VARIABLE  deslocar, e ir ao estado 13

    VARIABLE  [reduzir usando a regra 13 (term)]
    $padrão   reduzir usando a regra 13 (term)

    expression  ir ao estado 24
    term        ir ao estado 15
    factor      ir ao estado 16
    value       ir ao estado 17


Estado 11

   25 value: NUMBER •

    $padrão  reduzir usando a regra 25 (value)


Estado 12

   26 value: STRING •

    $padrão  reduzir usando a regra 26 (value)


Estado 13

   27 value: VARIABLE •

    $padrão  reduzir usando a regra 27 (value)


Estado 14

    4 statement: IF expression • THEN statements ELSE statements ENDIF
   10 expression: expression • PLUS term
   11           | expression • MINUS term

    THEN   deslocar, e ir ao estado 25
    PLUS   deslocar, e ir ao estado 26
    MINUS  deslocar, e ir ao estado 27


Estado 15

   12 expression: term •
   14 term: term • OR factor
   15     | term • AND factor
   16     | term • EQUAL factor
   17     | term • NOT_EQUAL factor
   18     | term • LESS_THAN factor
   19     | term • GREATER_THAN factor
   20     | term • LESS_THAN_OR_EQUAL factor
   21     | term • GREATER_THAN_OR_EQUAL factor

    AND                    deslocar, e ir ao estado 28
    OR                     deslocar, e ir ao estado 29
    EQUAL                  deslocar, e ir ao estado 30
    NOT_EQUAL              deslocar, e ir ao estado 31
    LESS_THAN              deslocar, e ir ao estado 32
    GREATER_THAN           deslocar, e ir ao estado 33
    LESS_THAN_OR_EQUAL     deslocar, e ir ao estado 34
    GREATER_THAN_OR_EQUAL  deslocar, e ir ao estado 35

    $padrão  reduzir usando a regra 12 (expression)


Estado 16

   22 term: factor •
   23 factor: factor • LEFT_PARENTHESIS expression RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 22 (term)


Estado 17

   24 factor: value •

    $padrão  reduzir usando a regra 24 (factor)


Estado 18

    5 statement: WHILE expression • DO statements ENDWHILE
   10 expression: expression • PLUS term
   11           | expression • MINUS term

    DO     deslocar, e ir ao estado 37
    PLUS   deslocar, e ir ao estado 26
    MINUS  deslocar, e ir ao estado 27


Estado 19

    6 statement: FUNCTION VARIABLE • LEFT_PARENTHESIS RIGHT_PARENTHESIS statements ENDFUNCTION

    LEFT_PARENTHESIS  deslocar, e ir ao estado 38


Estado 20

    7 statement: DECLARE VARIABLE • AS type

    AS  deslocar, e ir ao estado 39


Estado 21

    9 statement: PRINT expression •
   10 expression: expression • PLUS term
   11           | expression • MINUS term

    PLUS   deslocar, e ir ao estado 26
    MINUS  deslocar, e ir ao estado 27

    $padrão  reduzir usando a regra 9 (statement)


Estado 22

    0 $accept: program $end •

    $padrão  aceitar


Estado 23

    3 statements: statements statement •

    $padrão  reduzir usando a regra 3 (statements)


Estado 24

    8 statement: VARIABLE EQUAL expression •
   10 expression: expression • PLUS term
   11           | expression • MINUS term

    PLUS   deslocar, e ir ao estado 26
    MINUS  deslocar, e ir ao estado 27

    $padrão  reduzir usando a regra 8 (statement)


Estado 25

    4 statement: IF expression THEN • statements ELSE statements ENDIF

    VARIABLE  deslocar, e ir ao estado 1
    IF        deslocar, e ir ao estado 2
    WHILE     deslocar, e ir ao estado 3
    FUNCTION  deslocar, e ir ao estado 4
    DECLARE   deslocar, e ir ao estado 5
    PRINT     deslocar, e ir ao estado 6

    statements  ir ao estado 40
    statement   ir ao estado 9


Estado 26

   10 expression: expression PLUS • term

    NUMBER    deslocar, e ir ao estado 11
    STRING    deslocar, e ir ao estado 12
    VARIABLE  deslocar, e ir ao estado 13

    VARIABLE  [reduzir usando a regra 13 (term)]
    $padrão   reduzir usando a regra 13 (term)

    term    ir ao estado 41
    factor  ir ao estado 16
    value   ir ao estado 17


Estado 27

   11 expression: expression MINUS • term

    NUMBER    deslocar, e ir ao estado 11
    STRING    deslocar, e ir ao estado 12
    VARIABLE  deslocar, e ir ao estado 13

    VARIABLE  [reduzir usando a regra 13 (term)]
    $padrão   reduzir usando a regra 13 (term)

    term    ir ao estado 42
    factor  ir ao estado 16
    value   ir ao estado 17


Estado 28

   15 term: term AND • factor

    NUMBER    deslocar, e ir ao estado 11
    STRING    deslocar, e ir ao estado 12
    VARIABLE  deslocar, e ir ao estado 13

    factor  ir ao estado 43
    value   ir ao estado 17


Estado 29

   14 term: term OR • factor

    NUMBER    deslocar, e ir ao estado 11
    STRING    deslocar, e ir ao estado 12
    VARIABLE  deslocar, e ir ao estado 13

    factor  ir ao estado 44
    value   ir ao estado 17


Estado 30

   16 term: term EQUAL • factor

    NUMBER    deslocar, e ir ao estado 11
    STRING    deslocar, e ir ao estado 12
    VARIABLE  deslocar, e ir ao estado 13

    factor  ir ao estado 45
    value   ir ao estado 17


Estado 31

   17 term: term NOT_EQUAL • factor

    NUMBER    deslocar, e ir ao estado 11
    STRING    deslocar, e ir ao estado 12
    VARIABLE  deslocar, e ir ao estado 13

    factor  ir ao estado 46
    value   ir ao estado 17


Estado 32

   18 term: term LESS_THAN • factor

    NUMBER    deslocar, e ir ao estado 11
    STRING    deslocar, e ir ao estado 12
    VARIABLE  deslocar, e ir ao estado 13

    factor  ir ao estado 47
    value   ir ao estado 17


Estado 33

   19 term: term GREATER_THAN • factor

    NUMBER    deslocar, e ir ao estado 11
    STRING    deslocar, e ir ao estado 12
    VARIABLE  deslocar, e ir ao estado 13

    factor  ir ao estado 48
    value   ir ao estado 17


Estado 34

   20 term: term LESS_THAN_OR_EQUAL • factor

    NUMBER    deslocar, e ir ao estado 11
    STRING    deslocar, e ir ao estado 12
    VARIABLE  deslocar, e ir ao estado 13

    factor  ir ao estado 49
    value   ir ao estado 17


Estado 35

   21 term: term GREATER_THAN_OR_EQUAL • factor

    NUMBER    deslocar, e ir ao estado 11
    STRING    deslocar, e ir ao estado 12
    VARIABLE  deslocar, e ir ao estado 13

    factor  ir ao estado 50
    value   ir ao estado 17


Estado 36

   23 factor: factor LEFT_PARENTHESIS • expression RIGHT_PARENTHESIS

    NUMBER    deslocar, e ir ao estado 11
    STRING    deslocar, e ir ao estado 12
    VARIABLE  deslocar, e ir ao estado 13

    $padrão  reduzir usando a regra 13 (term)

    expression  ir ao estado 51
    term        ir ao estado 15
    factor      ir ao estado 16
    value       ir ao estado 17


Estado 37

    5 statement: WHILE expression DO • statements ENDWHILE

    VARIABLE  deslocar, e ir ao estado 1
    IF        deslocar, e ir ao estado 2
    WHILE     deslocar, e ir ao estado 3
    FUNCTION  deslocar, e ir ao estado 4
    DECLARE   deslocar, e ir ao estado 5
    PRINT     deslocar, e ir ao estado 6

    statements  ir ao estado 52
    statement   ir ao estado 9


Estado 38

    6 statement: FUNCTION VARIABLE LEFT_PARENTHESIS • RIGHT_PARENTHESIS statements ENDFUNCTION

    RIGHT_PARENTHESIS  deslocar, e ir ao estado 53


Estado 39

    7 statement: DECLARE VARIABLE AS • type

    TYPE_STRING   deslocar, e ir ao estado 54
    TYPE_INTEGER  deslocar, e ir ao estado 55

    type  ir ao estado 56


Estado 40

    3 statements: statements • statement
    4 statement: IF expression THEN statements • ELSE statements ENDIF

    VARIABLE  deslocar, e ir ao estado 1
    IF        deslocar, e ir ao estado 2
    ELSE      deslocar, e ir ao estado 57
    WHILE     deslocar, e ir ao estado 3
    FUNCTION  deslocar, e ir ao estado 4
    DECLARE   deslocar, e ir ao estado 5
    PRINT     deslocar, e ir ao estado 6

    statement  ir ao estado 23


Estado 41

   10 expression: expression PLUS term •
   14 term: term • OR factor
   15     | term • AND factor
   16     | term • EQUAL factor
   17     | term • NOT_EQUAL factor
   18     | term • LESS_THAN factor
   19     | term • GREATER_THAN factor
   20     | term • LESS_THAN_OR_EQUAL factor
   21     | term • GREATER_THAN_OR_EQUAL factor

    AND                    deslocar, e ir ao estado 28
    OR                     deslocar, e ir ao estado 29
    EQUAL                  deslocar, e ir ao estado 30
    NOT_EQUAL              deslocar, e ir ao estado 31
    LESS_THAN              deslocar, e ir ao estado 32
    GREATER_THAN           deslocar, e ir ao estado 33
    LESS_THAN_OR_EQUAL     deslocar, e ir ao estado 34
    GREATER_THAN_OR_EQUAL  deslocar, e ir ao estado 35

    $padrão  reduzir usando a regra 10 (expression)


Estado 42

   11 expression: expression MINUS term •
   14 term: term • OR factor
   15     | term • AND factor
   16     | term • EQUAL factor
   17     | term • NOT_EQUAL factor
   18     | term • LESS_THAN factor
   19     | term • GREATER_THAN factor
   20     | term • LESS_THAN_OR_EQUAL factor
   21     | term • GREATER_THAN_OR_EQUAL factor

    AND                    deslocar, e ir ao estado 28
    OR                     deslocar, e ir ao estado 29
    EQUAL                  deslocar, e ir ao estado 30
    NOT_EQUAL              deslocar, e ir ao estado 31
    LESS_THAN              deslocar, e ir ao estado 32
    GREATER_THAN           deslocar, e ir ao estado 33
    LESS_THAN_OR_EQUAL     deslocar, e ir ao estado 34
    GREATER_THAN_OR_EQUAL  deslocar, e ir ao estado 35

    $padrão  reduzir usando a regra 11 (expression)


Estado 43

   15 term: term AND factor •
   23 factor: factor • LEFT_PARENTHESIS expression RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 15 (term)


Estado 44

   14 term: term OR factor •
   23 factor: factor • LEFT_PARENTHESIS expression RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 14 (term)


Estado 45

   16 term: term EQUAL factor •
   23 factor: factor • LEFT_PARENTHESIS expression RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 16 (term)


Estado 46

   17 term: term NOT_EQUAL factor •
   23 factor: factor • LEFT_PARENTHESIS expression RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 17 (term)


Estado 47

   18 term: term LESS_THAN factor •
   23 factor: factor • LEFT_PARENTHESIS expression RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 18 (term)


Estado 48

   19 term: term GREATER_THAN factor •
   23 factor: factor • LEFT_PARENTHESIS expression RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 19 (term)


Estado 49

   20 term: term LESS_THAN_OR_EQUAL factor •
   23 factor: factor • LEFT_PARENTHESIS expression RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 20 (term)


Estado 50

   21 term: term GREATER_THAN_OR_EQUAL factor •
   23 factor: factor • LEFT_PARENTHESIS expression RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 21 (term)


Estado 51

   10 expression: expression • PLUS term
   11           | expression • MINUS term
   23 factor: factor LEFT_PARENTHESIS expression • RIGHT_PARENTHESIS

    RIGHT_PARENTHESIS  deslocar, e ir ao estado 58
    PLUS               deslocar, e ir ao estado 26
    MINUS              deslocar, e ir ao estado 27


Estado 52

    3 statements: statements • statement
    5 statement: WHILE expression DO statements • ENDWHILE

    VARIABLE  deslocar, e ir ao estado 1
    IF        deslocar, e ir ao estado 2
    WHILE     deslocar, e ir ao estado 3
    ENDWHILE  deslocar, e ir ao estado 59
    FUNCTION  deslocar, e ir ao estado 4
    DECLARE   deslocar, e ir ao estado 5
    PRINT     deslocar, e ir ao estado 6

    statement  ir ao estado 23


Estado 53

    6 statement: FUNCTION VARIABLE LEFT_PARENTHESIS RIGHT_PARENTHESIS • statements ENDFUNCTION

    VARIABLE  deslocar, e ir ao estado 1
    IF        deslocar, e ir ao estado 2
    WHILE     deslocar, e ir ao estado 3
    FUNCTION  deslocar, e ir ao estado 4
    DECLARE   deslocar, e ir ao estado 5
    PRINT     deslocar, e ir ao estado 6

    statements  ir ao estado 60
    statement   ir ao estado 9


Estado 54

   28 type: TYPE_STRING •

    $padrão  reduzir usando a regra 28 (type)


Estado 55

   29 type: TYPE_INTEGER •

    $padrão  reduzir usando a regra 29 (type)


Estado 56

    7 statement: DECLARE VARIABLE AS type •

    $padrão  reduzir usando a regra 7 (statement)


Estado 57

    4 statement: IF expression THEN statements ELSE • statements ENDIF

    VARIABLE  deslocar, e ir ao estado 1
    IF        deslocar, e ir ao estado 2
    WHILE     deslocar, e ir ao estado 3
    FUNCTION  deslocar, e ir ao estado 4
    DECLARE   deslocar, e ir ao estado 5
    PRINT     deslocar, e ir ao estado 6

    statements  ir ao estado 61
    statement   ir ao estado 9


Estado 58

   23 factor: factor LEFT_PARENTHESIS expression RIGHT_PARENTHESIS •

    $padrão  reduzir usando a regra 23 (factor)


Estado 59

    5 statement: WHILE expression DO statements ENDWHILE •

    $padrão  reduzir usando a regra 5 (statement)


Estado 60

    3 statements: statements • statement
    6 statement: FUNCTION VARIABLE LEFT_PARENTHESIS RIGHT_PARENTHESIS statements • ENDFUNCTION

    VARIABLE     deslocar, e ir ao estado 1
    IF           deslocar, e ir ao estado 2
    WHILE        deslocar, e ir ao estado 3
    FUNCTION     deslocar, e ir ao estado 4
    ENDFUNCTION  deslocar, e ir ao estado 62
    DECLARE      deslocar, e ir ao estado 5
    PRINT        deslocar, e ir ao estado 6

    statement  ir ao estado 23


Estado 61

    3 statements: statements • statement
    4 statement: IF expression THEN statements ELSE statements • ENDIF

    VARIABLE  deslocar, e ir ao estado 1
    IF        deslocar, e ir ao estado 2
    ENDIF     deslocar, e ir ao estado 63
    WHILE     deslocar, e ir ao estado 3
    FUNCTION  deslocar, e ir ao estado 4
    DECLARE   deslocar, e ir ao estado 5
    PRINT     deslocar, e ir ao estado 6

    statement  ir ao estado 23


Estado 62

    6 statement: FUNCTION VARIABLE LEFT_PARENTHESIS RIGHT_PARENTHESIS statements ENDFUNCTION •

    $padrão  reduzir usando a regra 6 (statement)


Estado 63

    4 statement: IF expression THEN statements ELSE statements ENDIF •

    $padrão  reduzir usando a regra 4 (statement)
